Fixed the Layout Breaking for Dialogs
Updated the html width to be 100% so the layout won't change when a
dialog appears.

Updated the md-no-scroll to hide overflow instead of set it to scroll
for browsers running under windows.

Changed the dialog to be fixed instead of absolute. Closes #333

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -445,6 +445,7 @@ $md-line-height: 20 / $md-font-size-base !default;
   html {
     background: if($light-theme, $md-light-theme-background-color, $md-dark-theme-background-color);
     font-size: #{$md-font-size-base}px;
+    width: 100%;
   }
 
   body {
