--- a/src/scss/components/_accessibility.scss
+++ b/src/scss/components/_accessibility.scss
@@ -25,7 +25,7 @@
   }
 
   .md-no-scroll {
-    overflow-y: scroll;
+    overflow-y: hidden;
     position: fixed;
   }
 
