--- a/src/scss/components/_dialogs.scss
+++ b/src/scss/components/_dialogs.scss
@@ -79,7 +79,7 @@ $md-dialog-horizontal-keyline: 40px;
     @include react-md-dialog-width;
 
     cursor: initial;
-    position: absolute;
+    position: fixed;
   }
 
   .md-dialog--centered {
